samples/_failures_safe/1761076864_bc3bcc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4b811b4.c: In function ‘main’:
./samples/SAFE/__tmp_d4b811b4.c:151:16: error: missing terminating " character
  151 |         printf("Round-trip failed
      |                ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d4b811b4.c:151:9: error: expected expression at end of input
  151 |         printf("Round-trip failed
      |         ^~~~~~
./samples/SAFE/__tmp_d4b811b4.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4b811b4.c:151:9: error: expected declaration or statement at end of input
